Thêm mục tài khoản Authorize Đăng nhập tk : phuhiep11395, pass: 123456 Update db mới để đăng nhập

--- a/Vimas/Content/css/theme.css
+++ b/Vimas/Content/css/theme.css
@@ -207,3 +207,7 @@ button:focus, a:focus, input:focus, select:focus {
 .field-validation-error {
         color:Red;
 }
+
+input[readonly].default-cursor {
+    cursor: default;
+}
