--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Vimas.ViewModels.ThongTinCaNhanEditViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Thêm học viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -66,7 +66,7 @@
                         <label class="control-label col-md-4" for="NgaySinh">Ngày Sinh<span style="color:red">*</span></label>
                         <div class="col-md-6">
                             <div class="fg-line">
-                                <input class="form-control" id="NgaySinh" type="text" value="" readonly style="background-color:white" />
+                                <input class="form-control default-cursor" id="NgaySinh" type="text" value="" readonly style="background-color:white" />
                                 <input type="hidden" name="NgaySinh" value="@this.Model.NgaySinh" />
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             <label class="control-label col-md-4" for="NgayCap">Ngày Cấp<span style="color:red">*</span></label>
                             <div class="col-md-6">
                                 <div class="fg-line">
-                                    <input class="form-control" id="NgayCap" type="text" value="" readonly style="background-color:white" />
+                                    <input class="form-control default-cursor" id="NgayCap" type="text" value="" readonly style="background-color:white" />
                                     <input type="hidden" name="NgayCap" value="@this.Model.NgayCap" />
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                             <label class="control-label col-md-4" for="NgayCapHC">Ngày cấp hộ chiếu</label>
                             <div class="col-md-6">
                                 <div class="fg-line">
-                                    <input class="form-control" id="NgayCapHC" type="text" value="" readonly style="background-color:white" />
+                                    <input class="form-control default-cursor" id="NgayCapHC" type="text" value="" readonly style="background-color:white" />
                                     <input type="hidden" name="NgayCapHC" value="@this.Model.NgayCapHC" />
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                             <label class="control-label col-md-4" for="NgayHetHan">Ngày hết hạn</label>
                             <div class="col-md-6">
                                 <div class="fg-line">
-                                    <input class="form-control" id="NgayHetHan" type="text" value="" readonly style="background-color:white" />
+                                    <input class="form-control default-cursor" id="NgayHetHan" type="text" value="" readonly style="background-color:white" />
                                     <input type="hidden" name="NgayHetHan" value="@this.Model.NgayHetHan" />
                                 </div>
                             </div>
@@ -275,7 +275,7 @@
             }
         },
         function (start, end, label) {
-            $('#NgaySinh"]').val(stảt.format('LL'));
+            $('#NgaySinh').val(stảt.format('LL'));
             $('input[name="NgaySinh"]').val(start.format("DD/MM/YYYY"));
         });
 
@@ -313,7 +313,7 @@
             }
         },
         function (start, end, label) {
-            $('#NgayCap"]').val(start.format('LL'));
+            $('#NgayCap').val(start.format('LL'));
             $('input[name="NgayCap"]').val(start.format("DD/MM/YYYY"));
         });
 
