--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @{
+    var user = HttpContext.Current.User;
     ViewBag.Title = "Danh sách học viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -82,13 +83,18 @@
                     "aTargets": [5],
                     "mRender": function (data, type, o) {
                         var data = o[5];
-                        var edit = "<a class='btn btn-sm btn-primary' href='@Url.Action("Edit","ThongTinCaNhan")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
+                        var edit = "<a id='editThongTinCaNhan' class='btn btn-sm btn-primary' href='@Url.Action("Edit","ThongTinCaNhan")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
                         return edit;
                     }
                 }
 
             ],
             "bAutoWidth": false
-    });
+        });
+    }
+
+    @if(!user.IsInRole("Admin") && !user.IsInRole("PhongNguon"))
+    {
+        <text>document.getElementById('editThongTinCaNhan').style.visibility = 'hidden';</text>
     }
 </script>
