--- a/Vimas/Content/Site.css
+++ b/Vimas/Content/Site.css
@@ -1,24 +1,132 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    color: #797979;
+    background: #eeeeee;
+    font-family: 'Lato', sans-serif;
+    padding: 0px !important;
+    margin: 0px !important;
+    font-size:14px !important;    
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+#container {
+    width: 100%;
+    height: 100%;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.login-img3-body{
+  background: url('../Content/img/bg-3.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.login-body {
+    background-color: #f1f2f7;
+}
+
+.login-form {
+    max-width: 350px;
+    margin: 200px auto 0;
+    background: #d5d7de;    
+}
+.login-img3-body .login-form{
+    border: 1px solid #B0B6BE;
+    background: rgba(213,215,222,0.9);
+}
+.login-form a{
+    color: #688a7e !important;
+}
+.login-form h2.login-form-heading {
+    margin: 0;
+    padding:20px 15px;
+    text-align: center;
+    background: #34aadc;
+    border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-family: 'Lato', sans-serif;
+}
+
+.login-form .checkbox {
+    margin-bottom: 14px;
+}
+.login-form .checkbox {
+    font-weight: normal;    
+    font-weight: 300;
+    font-family: 'Lato', sans-serif;
+}
+.login-form .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.login-form .form-control:focus {
+    z-index: 2;
+}
+.login-form .login-img{
+    font-size: 50px;
+    font-weight: 300;    
+}
+.login-form .input-group{
+    padding-bottom: 15px;
+}
+.login-form .input-group-addon{
+    padding: 6px 12px;
+    font-size: 16px;
+    color: #8b9199;
+    font-weight: normal;
+    line-height: 1;
+    text-align: center;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 0;
+}
+.login-form input[type="text"], .login-form input[type="password"] {    
+    border: none;
+    box-shadow: none;
+    font-size: 16px;
+    border-radius: 0; 
+}
+.login-form .btn{
+    border-radius: 0;
+}
+.login-form .btn-login {
+    background: #f67a6e;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-family: 'Lato', sans-serif;
+    box-shadow: 0 4px #e56b60;
+    margin-bottom: 20px;
+}
+
+.login-form p {
+    text-align: center;
+    color: #b6b6b6;
+    font-size: 16px;
+    font-weight: 300;
+}
+.login-img3-body .login-form p,.login-img2-body .login-form p {
+    color: #34aadc;
+}
+.login-form a {
+    color: #b6b6b6;
+}
+
+.login-form a:hover {
+    color: #34aadc;
+}
+.form .required{
+    font-size: 16px;
+    color: #00a0df;
+}
+.login-wrap {
+    padding: 20px;
 }
