--- a/Vimas/Areas/Admin/Views/TaiKhoan/Edit.cshtml
+++ b/Vimas/Areas/Admin/Views/TaiKhoan/Edit.cshtml
@@ -78,7 +78,7 @@
             data: formData,
             success: function (result) {
                 alert(result.message);
-                $('#editAccountModel').modal('hide');
+                $('#editAccountModal').modal('hide');
                 RefreshTable(taiKhoanDatatable);
             },
             error: function (error) {
