--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
@@ -24,6 +24,7 @@
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.TextBoxFor(q => q.MaLuuHoSo, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.MaLuuHoSo)
                             </div>
                         </div>
                     </div>
@@ -49,11 +50,12 @@
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.TextBoxFor(q => q.TenPhienAmNhat, new { @class = "form-control", required = "true" })
+                                @Html.ValidationMessageFor(q => q.TenPhienAmNhat)
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-4" for="GioiTinh">Giới Tính<span style="color:red">*</span></label>
+                        <label class="control-label col-md-4" for="Gender">Giới Tính<span style="color:red">*</span></label>
                         <div class="col-md-6">
                             @*<select class="form-control" id="GioiTinh" name="GioiTinh">
                                     <option value="true" selected>Nam</option>
@@ -72,7 +74,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-4" for="TrinhDoVanHoa">Trình độ văn hóa<span style="color:red">*</span></label>
+                        <label class="control-label col-md-4" for="EducationLevel">Trình độ văn hóa<span style="color:red">*</span></label>
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.EnumDropDownListFor(q => q.EducationLevel, new { @class = "form-control" })
@@ -88,7 +90,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-4" for="TinhTrangGiaDinh">Tình trạng gia đình<span style="color:red">*</span></label>
+                        <label class="control-label col-md-4" for="FamilyStatus">Tình trạng gia đình<span style="color:red">*</span></label>
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.EnumDropDownListFor(q => q.FamilyStatus, new { @class = "form-control" })
@@ -185,6 +187,7 @@
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.TextBoxFor(q => q.DienThoaiDiDong, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.DienThoaiDiDong)
                             </div>
                         </div>
                     </div>
@@ -193,6 +196,7 @@
                         <div class="col-md-6">
                             <div class="fg-line">
                                 @Html.TextBoxFor(q => q.DienThoaiNha, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.DienThoaiNha)
                             </div>
                         </div>
                     </div>
@@ -246,6 +250,8 @@
             singleDatePicker: true,
             showDropdowns: true,
             autoUpdateInput: false,
+            minDate: moment().add(-50, 'y'),
+            maxDate: moment().add(10,'y'),
             locale: {
                 format: "LL",
                 daysOfWeek: [
@@ -275,7 +281,7 @@
             }
         },
         function (start, end, label) {
-            $('#NgaySinh').val(stảt.format('LL'));
+            $('#NgaySinh').val(start.format('LL'));
             $('input[name="NgaySinh"]').val(start.format("DD/MM/YYYY"));
         });
 
@@ -284,6 +290,8 @@
             singleDatePicker: true,
             showDropdowns: true,
             autoUpdateInput: false,
+            minDate: moment().add(-50, 'y'),
+            maxDate: moment().add(10, 'y'),
             locale: {
                 format: "LL",
                 daysOfWeek: [
@@ -322,6 +330,8 @@
             singleDatePicker: true,
             showDropdowns: true,
             autoUpdateInput: false,
+            minDate: moment().add(-50, 'y'),
+            maxDate: moment().add(10, 'y'),
             locale: {
                 format: "LL",
                 daysOfWeek: [
@@ -360,6 +370,8 @@
             singleDatePicker: true,
             showDropdowns: true,
             autoUpdateInput: false,
+            minDate: moment().add(-50, 'y'),
+            maxDate: moment().add(10, 'y'),
             locale: {
                 format: "LL",
                 daysOfWeek: [
