--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Edit.cshtml
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-md-5">Ngày cấp hộ chiếu</label>
+                                <label class="control-label col-md-5" for="NgayCapHC">Ngày cấp hộ chiếu</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
                                         <input class="form-control" id="NgayCapHC" type="text" value="" style="background-color:white" />
