--- a/Vimas/Areas/Admin/Views/TaiKhoan/Create.cshtml
+++ b/Vimas/Areas/Admin/Views/TaiKhoan/Create.cshtml
@@ -78,7 +78,7 @@
             success: function (result) {
                 alert(result.message);
                 $('#createAccountModal').modal('hide');
-                RefreshTable(taiKhoanDatatable);
+                RefreshTable();
             },
             error: function (error) {
                 alert(result.message);
