--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Danh sách học viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .display-initial {
+        display: initial;
+    }
+</style>
 
 <div class="card">
     <div class="card-header">
@@ -54,6 +59,8 @@
 <script>
     $(document).ready(function () {
         InitOrderDatatable();
+        $('#hocVienDatatable_length, #hocVienDatatable_filter, #hocVienDatatable_info, hocVienDatatable_paginate').addClass('display-initial');
+        $('#hocVienDatatable_filter, #hocVienDatatable_paginate').addClass('pull-right');
     });
     function InitOrderDatatable() {
         $("#hocVienDatatable").dataTable({
