--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Index.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Danh sách học viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<style>
+@*<style>
     .display-initial {
         display: initial;
     }
-</style>
+</style>*@
 
 <div class="card">
     <div class="card-header">
@@ -79,7 +79,11 @@
                 "sEmptyTable": "Không có dữ liệu",
                 "sInfoFiltered": " - lọc ra từ _MAX_ dòng",
                 "sLengthMenu": "Hiển thị _MENU_ dòng",
-                "sProcessing": "Đang xử lý..."
+                "sProcessing": "Đang xử lý...",
+                "oPaginate": {
+                    "sNext": "<i class='fa fa-chevron-right'></i>",
+                    "sPrevious": "<i class='fa fa-chevron-left'></i>"
+                }
             },
             "aoColumnDefs": [
                 {
