--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=latin,latin-ext,cyrillic,cyrillic-ext" rel="stylesheet" type="text/css" />
     <link href="/Content/template/template-epona/css/font-awesome.css" rel="stylesheet" />
 
-    @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/dt/dt-1.10.10/datatables.min.css" />
-        <script type="text/javascript" src="https://cdn.datatables.net/t/dt/dt-1.10.10/datatables.min.js"></script>*@
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/dt/dt-1.10.10/datatables.min.css" />
+        <script type="text/javascript" src="https://cdn.datatables.net/t/dt/dt-1.10.10/datatables.min.js"></script>
 
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
    
@@ -35,7 +35,7 @@
     @*<link href="~/Content/plugins/bootstrap-select-1.10.0/dist/css/bootstrap-select.min.css" rel="stylesheet"/>*@
     @*<link href="~/Content/plugins/bootstrap-select/dist/css/bootstrap-select.css" rel="stylesheet"/>*@
     <link href="~/Content/plugins/select2-4.0.3/dist/css/select2.min.css" rel="stylesheet" />
-    <link href="~/Content/plugins/DataTables-1.10.12/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+    @*<link href="~/Content/plugins/DataTables-1.10.12/media/css/dataTables.bootstrap.min.css" rel="stylesheet" />*@
     <!-- CSS -->
     <link href="~/Content/template/template-material/css/app.min.1.css" rel="stylesheet">
     <link href="~/Content/template/template-material/css/app.min.2.css" rel="stylesheet">
@@ -45,6 +45,7 @@
 
     <!-- Custom -->
     <link href="~/Content/css/theme.css" rel="stylesheet" />
+    <link href="~/Content/css/style.css" rel="stylesheet"/>
     <style>
         body {
             font-family: 'OpenSans';
