Finish CRUD TrungTamGTVL Chưa có validate

--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
@@ -275,7 +275,7 @@
             }
         },
         function (start, end, label) {
-            $('#NgaySinh').val(stảt.format('LL'));
+            $('#NgaySinh').val(start.format('LL'));
             $('input[name="NgaySinh"]').val(start.format("DD/MM/YYYY"));
         });
 
