--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -39,6 +39,7 @@
             <div class="col-md-12">
                 <ul class="tab-nav tn-justified">
                     <li class="active waves-effect"><a data-toggle="tab" href="#quaTrinhHocTap">Quá trình học tập</a></li>
+                    <li class="active waves-effect"><a data-toggle="tab" href="#thongTinGiaDinh">Thông tin gia đình</a></li>
                     <li class="waves-effect"><a data-toggle="tab" href="#quaTrinhLamViec">Quá trình làm việc</a></li>
                 </ul>
             </div>
@@ -77,7 +78,14 @@
                         </div>
                     </div>
                 </div>
-
+                <div id="thongTinGiaDinh" class="tab-pane fade">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-body">
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div id="quaTrinhLamViec" class="tab-pane fade">
                     <div class="col-md-12">
                         <div class="card">
@@ -109,6 +117,9 @@
             "bProcessing": true,
             "iDisplayLength": 10,
             "aLengthMenu": [10, 25, 50],
+            "fnServerParams": function ( aoData ) {
+                aoData.push( { "name": "userId", "value": "@this.Model.Id" } );
+            },
             "oLanguage": {
                 "sSearch": "Tìm kiếm:",
                 "sZeroRecords": "Không có dữ liệu phù hợp",
