--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -82,6 +82,31 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
+                                <table id="quaTrinhLamViecTable" class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                <label class="">Tên công ty</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Hình thức công ty</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Chi tiết công việc</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Địa chỉ</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Đang làm</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Từ năm - Đến năm</label>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -93,6 +118,9 @@
 
 <div id="createQTHTPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
 <div id="editQTHTPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
+
+<div id="createQTLVPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
+<div id="editQTLVPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
 
 <script>
     $(document).ready(function () {
@@ -148,6 +176,57 @@
             ],
             "bAutoWidth": false
         });
+        $("#quaTrinhLamViecTable").dataTable({
+            "bSort": false,
+            "bRetrieve": true,
+            "bServerSide": true,
+            "bScrollCollapse": true,
+            "sAjaxSource": "@Url.Action("LoadQuaTrinhLamViec", "QuaTrinhLamViec")",
+            "bProcessing": true,
+            "iDisplayLength": 10,
+            "aLengthMenu": [10, 25, 50],
+            "fnServerParams": function (aoData) {
+                aoData.push({ "name": "userId", "value": "@this.Model.Id" });
+            },
+            "oLanguage": {
+                "sSearch": "Tìm kiếm:",
+                "sZeroRecords": "Không có dữ liệu phù hợp",
+                "sInfo": "Hiển thị từ _START_ đến _END_ trên tổng số _TOTAL_ dòng",
+                "sEmptyTable": "Không có dữ liệu",
+                "sInfoFiltered": " - lọc ra từ _MAX_ dòng",
+                "sLengthMenu": "Hiển thị _MENU_ dòng",
+                "sProcessing": "Đang xử lý...",
+                "oPaginate": {
+                    "sNext": "<i class='fa fa-chevron-right'></i>",
+                    "sPrevious": "<i class='fa fa-chevron-left'></i>"
+                }
+            },
+            "aoColumnDefs": [
+                {
+                    "aTargets": [0, 1, 2, 3, 4],
+                    "bSortable": false
+                },
+                {
+                    "aTargets": [5],
+                    "mRender": function (data, type, o) {
+                        var tuNam = o[5];
+                        var denNam = o[6];
+                        return tuNam + " - " + denNam;
+                    }
+                },
+                {
+                    "aTargets": [6],
+                    "mRender": function (data, type, o) {
+                        var data = o[7];
+                        var edit = "<button type='button' id='editThongTinCaNhan' class='btn btn-sm btn-primary' onclick='showEditQTLV(\"" + data + "\")'><i class='glyphicon glyphicon-pencil'></i> Edit</button>";
+                        var del = "<button type='button' id='deleteThongTinCaNhan' class='btn btn-sm btn-danger' onclick='deleteQTLV(\"" + data + "\")'><i class='glyphicon glyphicon-trash'></i> Delete</button>";
+                        return edit + " " + del;
+                    }
+                }
+
+            ],
+            "bAutoWidth": false
+    });
     }
 
     function showCreateQTHT(idThongTinCaNhan) {
@@ -167,7 +246,23 @@
             }
         });
     }
-
+    function showCreateQTLV(idThongTinCaNhan) {
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("Create", "QuaTrinhLamViec")',
+            data: {
+                idThongTinCaNhan: idThongTinCaNhan,
+            },
+            success: function (result) {
+                //$('#myModal').modal('show');
+                $('#createQTLVPanel').html(result);
+                $('#createQTLVPanel').modal('show');
+            },
+            error: function (error) {
+                alert("Error Occured")
+            }
+        });
+    }
     function showEditQTHT(idQTHT) {
         $.ajax({
             type: "GET",
@@ -186,6 +281,23 @@
         });
     }
 
+    function showEditQTHT(idQTLV) {
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("Edit", "QuaTrinhLamViec")',
+            data: {
+                id: idQTLV,
+            },
+            success: function (result) {
+                //$('#myModal').modal('show');
+                $('#editQTLVPanel').html(result);
+                $('#editQTLVPanel').modal('show');
+            },
+            error: function (error) {
+                alert("Error Occured")
+            }
+        });
+    }
     function deleteQTHT(idQTHT) {
         if (confirm("Bạn có chắc xóa dòng này?")) {
             $.ajax({
@@ -204,8 +316,31 @@
         }
     }
 
+    function deleteQTHT(idQTLV) {
+        if (confirm("Bạn có chắc xóa dòng này?")) {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Delete", "QuaTrinhLamViec")',
+                data: {
+                    id: idQTLV,
+                },
+                success: function (result) {
+                    alert(result.message);
+                },
+                error: function (error) {
+                    alert(error.message);
+                }
+            });
+        }
+    }
+
     function RefreshQTHTTable() {
         var oTable = $('#quaTrinhHocTapTable').dataTable();
+        oTable._fnPageChange(0);
+        oTable._fnAjaxUpdate();
+    }
+    function RefreshQTLVTable() {
+        var oTable = $('#quaTrinhLamViecTable').dataTable();
         oTable._fnPageChange(0);
         oTable._fnAjaxUpdate();
     }
