--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -39,7 +39,7 @@
             <div class="col-md-12">
                 <ul class="tab-nav tn-justified">
                     <li class="active waves-effect"><a data-toggle="tab" href="#quaTrinhHocTap">Quá trình học tập</a></li>
-                    <li class="active waves-effect"><a data-toggle="tab" href="#thongTinGiaDinh">Thông tin gia đình</a></li>
+                    <li class="waves-effect"><a data-toggle="tab" href="#thongTinGiaDinh">Thông tin gia đình</a></li>
                     <li class="waves-effect"><a data-toggle="tab" href="#quaTrinhLamViec">Quá trình làm việc</a></li>
                 </ul>
             </div>
@@ -70,6 +70,9 @@
                                             <th>
                                                 <label class="">Từ năm - Đến năm</label>
                                             </th>
+                                            <th>
+                                                <label class=""></label>
+                                            </th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -80,8 +83,33 @@
                 </div>
                 <div id="thongTinGiaDinh" class="tab-pane fade">
                     <div class="col-md-12">
+                        <button type="button" onclick="showCreateTTGD(@(this.Model.Id))" class="btn btn-sm btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i> Thêm</button>
+                    </div>
+                    <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
+                                <table id="thongTinGiaDinhTable" class="table table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                <label class="">Họ Tên</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Quan hệ</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Số điện thoại</label>
+                                            </th>
+                                            <th>
+                                                <label class="">Địa chỉ</label>
+                                            </th>
+                                            <th>
+                                                <label class=""></label>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -101,6 +129,9 @@
 
 <div id="createQTHTPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
 <div id="editQTHTPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
+
+<div id="createTTGDPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
+<div id="editTTGDPanel" class="modal fade" data-backdrop="static" data-keyboard="true"></div>
 
 <script>
     $(document).ready(function () {
@@ -150,8 +181,8 @@
                     "aTargets": [5],
                     "mRender": function (data, type, o) {
                         var data = o[6];
-                        var edit = "<button type='button' id='editThongTinCaNhan' class='btn btn-sm btn-primary' onclick='showEditQTHT(\"" + data + "\")'><i class='glyphicon glyphicon-pencil'></i> Edit</button>";
-                        var del = "<button type='button' id='deleteThongTinCaNhan' class='btn btn-sm btn-danger' onclick='deleteQTHT(\"" + data + "\")'><i class='glyphicon glyphicon-trash'></i> Delete</button>";
+                        var edit = "<button type='button' id='editQuaTrinhHocTap' class='btn btn-sm btn-primary' onclick='showEditQTHT(\"" + data + "\")'><i class='glyphicon glyphicon-pencil'></i> Edit</button>";
+                        var del = "<button type='button' id='deleteQuaTrinhHocTap' class='btn btn-sm btn-danger' onclick='deleteQTHT(\"" + data + "\")'><i class='glyphicon glyphicon-trash'></i> Delete</button>";
                         return edit + " " + del;
                     }
                 }
@@ -159,6 +190,50 @@
             ],
             "bAutoWidth": false
         });
+
+        $("#thongTinGiaDinhTable").dataTable({
+            "bSort": false,
+            "bRetrieve": true,
+            "bServerSide": true,
+            "bScrollCollapse": true,
+            "sAjaxSource": "@Url.Action("LoadThongTinGiaDinh", "ThongTinGiaDinh")",
+            "bProcessing": true,
+            "iDisplayLength": 10,
+            "aLengthMenu": [10, 25, 50],
+            "fnServerParams": function ( aoData ) {
+                aoData.push( { "name": "userId", "value": "@this.Model.Id" } );
+            },
+            "oLanguage": {
+                "sSearch": "Tìm kiếm:",
+                "sZeroRecords": "Không có dữ liệu phù hợp",
+                "sInfo": "Hiển thị từ _START_ đến _END_ trên tổng số _TOTAL_ dòng",
+                "sEmptyTable": "Không có dữ liệu",
+                "sInfoFiltered": " - lọc ra từ _MAX_ dòng",
+                "sLengthMenu": "Hiển thị _MENU_ dòng",
+                "sProcessing": "Đang xử lý...",
+                "oPaginate": {
+                    "sNext": "<i class='fa fa-chevron-right'></i>",
+                    "sPrevious": "<i class='fa fa-chevron-left'></i>"
+                }
+            },
+            "aoColumnDefs": [
+                {
+                    "aTargets": [0, 1, 2, 3],
+                    "bSortable": false
+                },
+                {
+                    "aTargets": [4],
+                    "mRender": function (data, type, o) {
+                        var data = o[4];
+                        var edit = "<button type='button' id='editThongTinGiaDinh' class='btn btn-sm btn-primary' onclick='showEditTTGD(\"" + data + "\")'><i class='glyphicon glyphicon-pencil'></i> Edit</button>";
+                        var del = "<button type='button' id='deleteThongTinGiaDinh' class='btn btn-sm btn-danger' onclick='deleteTTGD(\"" + data + "\")'><i class='glyphicon glyphicon-trash'></i> Delete</button>";
+                        return edit + " " + del;
+                    }
+                }
+
+            ],
+            "bAutoWidth": false
+    });
     }
 
     function showCreateQTHT(idThongTinCaNhan) {
@@ -197,6 +272,42 @@
         });
     }
 
+    function showCreateTTGD(idThongTinCaNhan) {
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("Create","ThongTinGiaDinh")',
+            data: {
+                idThongTinCaNhan: idThongTinCaNhan,
+            },
+            success: function (result) {
+                //$('#myModal').modal('show');
+                $('#createTTGDPanel').html(result);
+                $('#createTTGDPanel').modal('show');
+            },
+            error: function (error) {
+                alert("Error Occured")
+            }
+        });
+    }
+
+    function showEditTTGD(idTTGD) {
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("Edit", "ThongTinGiaDinh")',
+            data: {
+                id: idTTGD,
+            },
+            success: function (result) {
+                //$('#myModal').modal('show');
+                $('#editTTGDPanel').html(result);
+                $('#editTTGDPanel').modal('show');
+            },
+            error: function (error) {
+                alert("Error Occured")
+            }
+        });
+    }
+
     function deleteQTHT(idQTHT) {
         if (confirm("Bạn có chắc xóa dòng này?")) {
             $.ajax({
@@ -207,6 +318,26 @@
                 },
                 success: function (result) {
                     alert(result.message);
+                    RefreshQTHTTable();
+                },
+                error: function (error) {
+                    alert(error.message);
+                }
+            });
+        }
+    }
+
+    function deleteTTGD(idTTGD) {
+        if (confirm("Bạn có chắc xóa dòng này?")) {
+            $.ajax({
+                type: "POST",
+                url: '@Url.Action("Delete","ThongTinGiaDinh")',
+                data: {
+                    id: idTTGD,
+                },
+                success: function (result) {
+                    alert(result.message);
+                    RefreshTTGDTable();
                 },
                 error: function (error) {
                     alert(error.message);
@@ -217,6 +348,12 @@
 
     function RefreshQTHTTable() {
         var oTable = $('#quaTrinhHocTapTable').dataTable();
+        oTable._fnPageChange(0);
+        oTable._fnAjaxUpdate();
+    }
+
+    function RefreshTTGDTable() {
+        var oTable = $('#thongTinGiaDinhTable').dataTable();
         oTable._fnPageChange(0);
         oTable._fnAjaxUpdate();
     }
